# alabofur

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
alabofur/: __init__.py  alabofur.service  cli.py  config.py  tc.py
alabofur/man/: alabofur.1
